--- a/toggle/index.html
+++ b/toggle/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="maincontainer" class="mainc" style=" padding-left: 5px; ">
+    <div id="maincontainer" class="mainc" style=" padding-left: 	0.3125em; ">
         <div id="innercircle" class="inc">
 
 
